<resources>
    <string name="app_name">Fly2Live</string>
    <string name="action_settings">Settings</string>

    <!-- Login fragment -->
    <string name="login">Login</string>

    <!-- Main fragment -->
    <string name="single_player">Single\nPlayer</string>
    <string name="multiplayer">Multi\nPlayer</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>

    <string name="cockpit">Cockpit</string>
    <string name="logo">Logo</string>

    <!-- Stats fragment -->
    <string name="score_leaderboard">Score Stats</string>
    <string name="win_leaderboard">WIN% Stats</string>
    <string name="best_players">Best Players</string>
    <string name="W">W</string>
    <string name="L">L</string>
    <string name="win_percentage">WIN%</string>
    <string name="value">Value</string>

    <!-- Settings fragment -->
    <string name="audio_on">Audio ON</string>
    <string name="audio_off">Audio OFF</string>
    <string name="logout">Logout</string>
    <string name="credits">Credits</string>

    <string name="shared_preferences_name">Fly2LiveSharedPreferences</string>
    <string name="shared_preference_audio">Fly2LiveSharedPreferenceAudio</string>

    <!-- Settings fragment -->
    <string name="developer">DEVELOPER</string>
    <string name="developer_name">Ivan Fardin</string>
    <string name="special_thanks">SPECIAL THANKS</string>
    <string name="special_thanks_name_0">Frank</string>
    <string name="special_thanks_name_1">Starder</string>
    <string name="special_thanks_name_2">Vectorpocket</string>
    <string name="special_thanks_name_3">Yhdf</string>

    <!-- Scenarios fragment -->
    <string name="scenario">Scenario</string>
    <string name="city_day">CITY BY DAY</string>
    <string name="city_night">CITY BY NIGHT</string>

    <!-- Loading fragment -->
    <string name="msg_connecting">Connecting to the server…</string>
    <string name="msg_bad_request">Bad Request</string>
    <string name="msg_searching_adv">Searching an adversary…</string>
    <string name="msg_found_adv">Adversary found…</string>
    <string name="msg_prepare">Preparing the game…</string>
    <string name="msg_game_start">Starting the game…</string>
    <!--<string name="msg_gameplay">Gameplay</string>
    <string name="msg_game_end">Game ended</string>-->
    <string name="msg_server_busy">Server busy, wait…</string>

    <!-- Game fragment -->
    <string name="loading">LOADING…</string>

    <!-- Game End fragment -->
    <string name="game_over">GAME OVER</string>
    <string name="you_win">YOU WIN</string>
    <string name="draw">DRAW</string>
    <string name="score">SCORE:</string>
    <string name="xp">XP:</string>
    <string name="new_level">NEW LEVEL</string>
    <string name="restart">RESTART</string>
    <string name="go_to_main_menu">GO TO MAIN MENU</string>
    <string name="share">SHARE</string>

    <string name="new_high_score">NEW HIGH SCORE</string>
</resources>