<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/menu_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:padding="16dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/win_leaderboard"
            android:textSize="@dimen/text_size_title_1"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/best_players"/>

        <TextView
            android:id="@+id/best_players"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/best_players"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_paragraph_2"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toStartOf="@id/W"
            app:layout_constraintStart_toStartOf="@id/menu_title"
            app:layout_constraintTop_toBottomOf="@id/menu_title"
            app:layout_constraintHorizontal_weight="0.55" />

        <TextView
            android:id="@+id/W"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/W"
            android:textSize="@dimen/text_size_paragraph_2"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="@id/best_players"
            app:layout_constraintEnd_toStartOf="@id/L"
            app:layout_constraintStart_toEndOf="@id/best_players"
            app:layout_constraintTop_toTopOf="@id/best_players"
            app:layout_constraintHorizontal_weight="0.15" />

        <TextView
            android:id="@+id/L"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/L"
            android:textSize="@dimen/text_size_paragraph_2"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="@id/best_players"
            app:layout_constraintEnd_toStartOf="@id/win_percentage"
            app:layout_constraintStart_toEndOf="@id/W"
            app:layout_constraintTop_toTopOf="@id/W"
            app:layout_constraintHorizontal_weight="0.15" />

        <TextView
            android:id="@+id/win_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/win_percentage"
            android:textSize="@dimen/text_size_paragraph_2"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="@id/best_players"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/L"
            app:layout_constraintTop_toTopOf="@id/L"
            app:layout_constraintHorizontal_weight="0.2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@id/menu_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/best_players" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>